--- a/app/build.gradle
+++ b/app/build.gradle
@@ -129,4 +129,9 @@ dependencies {
     debugImplementation "androidx.compose.ui:ui-tooling:1.2.1"
     implementation "androidx.compose.ui:ui-tooling-preview:1.2.1"
 
+
+    //Jetpack compose accompanist utils
+    implementation "com.google.accompanist:accompanist-placeholder:0.12.0"
+
+
 }
