--- a/app/build.gradle
+++ b/app/build.gradle
@@ -111,6 +111,12 @@ dependencies {
     implementation "com.squareup.okhttp3:okhttp:5.0.0-alpha.3"
     implementation "com.squareup.okhttp3:logging-interceptor:5.0.0-alpha.3"
 
+
+    //ktor
+    implementation("io.ktor:ktor-client-core:$ktor_version")
+    implementation("io.ktor:ktor-client-cio:$ktor_version")
+    implementation("io.ktor:ktor-client-websockets:$ktor_version")
+
     // Room
     implementation "androidx.room:room-runtime:2.4.3"
     kapt "androidx.room:room-compiler:2.4.3"
@@ -125,6 +131,7 @@ dependencies {
     //placeholder
     implementation "com.google.accompanist:accompanist-placeholder-material:0.24.7-alpha"
     implementation "com.google.accompanist:accompanist-placeholder:0.24.7-alpha"
+
     //compose preview
     debugImplementation "androidx.compose.ui:ui-tooling:1.2.1"
     implementation "androidx.compose.ui:ui-tooling-preview:1.2.1"
@@ -132,6 +139,9 @@ dependencies {
 
     //Jetpack compose accompanist utils
     implementation "com.google.accompanist:accompanist-placeholder:0.12.0"
+
+
+
 
 
 }
