--- a/app/build.gradle
+++ b/app/build.gradle
@@ -120,7 +120,7 @@ dependencies {
     implementation("io.ktor:ktor-serialization-kotlinx-json:$ktor_version")
     implementation("io.ktor:ktor-serialization-gson:$ktor_version")
 
-    
+
     // Room
     implementation "androidx.room:room-runtime:2.4.3"
     kapt "androidx.room:room-compiler:2.4.3"
@@ -141,7 +141,9 @@ dependencies {
     implementation "androidx.compose.ui:ui-tooling-preview:1.2.1"
 
 
+    implementation "io.github.vanpra.compose-material-dialogs:datetime:0.8.1-rc"
+    coreLibraryDesugaring 'com.android.tools:desugar_jdk_libs:1.1.6'
+
     //Jetpack compose accompanist utils
     implementation "com.google.accompanist:accompanist-placeholder:0.12.0"
-    
 }
