Добавлена возможность открывать скачанные файлы из задачи с помощью других приложений Added the ability to open downloaded files from a task using other applications

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -22,7 +22,7 @@ android {
     compileSdk 32
 
     defaultConfig {
-        applicationId "com.example.cryptoapp"
+        applicationId "com.example.tasksapp"
         minSdk 23
         targetSdk 32
         versionCode 1
